--- a/hello.html
+++ b/hello.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+    <style>
+      body {
+        margin: 0;
+        background-image: url(../bg_dot.png);
 
-<body>
-    ㅁㄴㅇㅁㄴㅇ
-</body>
+      }
 
+      .container {
+        width: 100%;
+        height: 100vh;
+        background-image: url(../manhole_main.png)  ;
+        background-repeat: no-repeat;
+        background-size: 1300px 800px;
+        background-position: center;
+        border: 20px solid #288e44;
+        box-sizing: border-box;
+      }
+    </style>
+  </head>
+
+  <body>
+ <div class="container"></div>
+      <br />
+    </div>
+  </body>
 </html>
