--- a/hello.html
+++ b/hello.html
@@ -21,11 +21,36 @@
         border: 20px solid #288e44;
         box-sizing: border-box;
       }
+      .imgcontainer {
+  width: 500px;
+  height: 400px;
+  border: 3px solid black;
+  margin: 10px;
+  background-image: url("images/image.png");
+  background-repeat: no-repeat;
+
+  background-position: left top;
+  /* background-position: left center;
+  background-position: left bottom;
+  background-position: right top;
+  background-position: right center;
+  background-position: right bottom;
+  background-position: center top;
+  background-position: center bottom;
+  background-position: center center;
+  background-position: center; */
+}
+
+      }
+    
     </style>
   </head>
 
   <body>
- <div class="container"></div>
+     
+ <div class="container">
+   <div class="imgcontainer"><a href="file:///Users/tamura/Documents/GitHub/PokeManhole_Front/hello.html"><img src="../manhole_title_ko.png" alt="" width="500px" ></a></div>
+ </div>
       <br />
     </div>
   </body>
