--- a/login/login.html
+++ b/login/login.html
@@ -25,7 +25,7 @@
       <span>오랜만이에요!</span>
       <input type="email" placeholder="Email" />
       <input type="password" placeholder="Password" />
-      <a href="#">비밀번호를 잊으셨나요?</a>
+      <a href="#">비밀번호를 잊으셨나요? 안녕하세요</a>
       <button>Poke!</button>
     </form>
   </div>
