오네가이시마스

--- a/login/login_grey.html
+++ b/login/login_grey.html
@@ -45,5 +45,5 @@
   </div>
 </div>
 
-<link rel="stylesheet" href="./login_style.css" />
+<link rel="stylesheet" href="./login_style_grey.css" />
 <script src="./login.js"></script>
