--- a/01.mainpage/mainpage_greyR.html
+++ b/01.mainpage/mainpage_greyR.html
@@ -111,6 +111,14 @@
 
  
     <div class="container1">
+      <audio
+        id="player"
+        src="../bgm/1-40. Goldenrod City.mp3"
+        autoplay
+        controls
+        loop
+        onloadstart="this.volume=0.15"
+      ></audio>
       <!-- <audio src="../bgm/1-05. New Bark Town.mp3" autoplay loop onloadstart="this.volume=0.2"></audio> -->
 
    
