--- a/02.manholetable/manholetable_Kanto.html
+++ b/02.manholetable/manholetable_Kanto.html
@@ -24,31 +24,31 @@
       }
       .redstand {
         position: absolute;
-        width: 100px;
+        width: 150px;
         right: 250px;
-        bottom: 0px;
+        bottom: 10px;
       }
       .greenstand {
         position: absolute;
-        width: 100px;
+        width: 130px;
         right: 140px;
-        bottom: 0px;
+        bottom: 10px;
       }
       .bluestand {
         position: absolute;
-        width: 90px;
-        right: 10px;
-        bottom: 0px;
+        width: 130px;
+        right: 30px;
+        bottom: 10px;
       }
       .pikaoko {
         position: absolute;
-        width: 100px;
+        width: 120px;
         left: 400px;
         bottom: 10px;
       }
       .jamman {
         position: absolute;
-        width: 300px;
+        width: 320px;
         left: 50px;
         bottom: 10px;
         transform: scaleX(-1);
@@ -77,7 +77,14 @@
         font-size: 35px;
         color: #929191;
         margin: 0 auto;
-        padding: 20px 0;
+        padding-top: 20px;
+      }
+      .manholetable h5 {
+        display: flex;
+        justify-content: center;
+
+        color: black;
+        margin: 0 auto;
       }
       .manholetable h1::before {
         content: "";
@@ -121,8 +128,12 @@
         top: 10px;
         left: 0;
         margin: 0;
-        padding: 0;
+        padding-left: 10px;
         border-radius: 10px;
+      }
+      td img {
+        width: 70px;
+        margin: 0px;
       }
     </style>
   </head>
@@ -144,34 +155,66 @@
 
       <div class="manholetable">
         <h1>간토</h1>
+        <h5>&nbsp;55%</h5>
         <table class="manholetableline">
           <tr>
             <th>토치기</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
           <tr>
             <th>사이타마</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
           <tr>
             <th>치바</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
           <tr>
             <th>도쿄</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
           <tr>
             <th>카나가와</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
           <tr>
             <th>이바라키</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
           <tr>
             <th>군마</th>
-            <td colspan="6"></td>
+            <td colspan="6">
+              <img src="../src/hole/red.png" alt="" width="" />
+            </td>
           </tr>
         </table>
       </div>
