--- a/05.achievement/AchievementOnlyName.html
+++ b/05.achievement/AchievementOnlyName.html
@@ -182,7 +182,7 @@
           <tr>
             <th><img src="../src/achv/pika.png" alt="" /></th>
             <td colspan="6">
-              <h3>영원한 나의 친구</h3>
+              <h3>피카츄</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 피카츄를 발견하세요.</p>
             </td>
@@ -190,7 +190,7 @@
           <tr>
             <th><img src="../src/achv/pairi.png" alt="" /></th>
             <td colspan="6">
-              <h3>"꼬리가 타고 있는 작은 소리가 들려"</h3>
+              <h3>파이리</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 파이리를 발견하세요.</p>
             </td>
@@ -198,7 +198,7 @@
           <tr>
             <th><img src="../src/achv/kobugi.png" alt="" /></th>
             <td colspan="6">
-              <h3>"눈물이 아니라 물대포라고"</h3>
+              <h3>꼬부기</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 꼬부기를 발견하세요.</p>
             </td>
@@ -206,23 +206,15 @@
           <tr>
             <th><img src="../src/achv/isanghae.png" alt="" /></th>
             <td colspan="6">
-              <h3>"햇빛을 받을수록 힘이 솟아나"</h3>
+              <h3>이상해씨</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 이상해씨를 발견하세요.</p>
             </td>
           </tr>
           <tr>
-            <th><img src="../src/3start.png" alt="" /></th>
-            <td colspan="6">
-              <h3>최초의 삼총사</h3>
-              <h4>95%</h4>
-              <p>파이리,꼬부기,이상해씨를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
             <th><img src="../src/achv/butterful.png" alt="" /></th>
             <td colspan="6">
-              <h3>”예쁜 꽃의 꿀을 찾아서”</h3>
+              <h3>버터플</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 버터플을 발견하세요.</p>
             </td>
@@ -230,7 +222,7 @@
           <tr>
             <th><img src="../src/achv/bird.png" alt="" /></th>
             <td colspan="6">
-              <h3>용감한 하늘의 에이스</h3>
+              <h3>피죤투</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 피죤투를 발견하세요.</p>
             </td>
@@ -238,7 +230,7 @@
           <tr>
             <th><img src="../src/achv/purin.png" alt="" /></th>
             <td colspan="6">
-              <h3>잠이 올 것 같은 기분 좋은 노래</h3>
+              <h3>푸린</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 푸린을 발견하세요.</p>
             </td>
@@ -246,7 +238,7 @@
           <tr>
             <th><img src="../src/achv/sixtale.png" alt="" /></th>
             <td colspan="6">
-              <h3>따스한 여섯 갈래의 꼬리</h3>
+              <h3>식스테일</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 식스테일을 발견하세요.</p>
             </td>
@@ -254,7 +246,7 @@
           <tr>
             <th><img src="../src/achv/gorapaduk.png" alt="" /></th>
             <td colspan="6">
-              <h3>”항상 두통에 시달려”</h3>
+              <h3>고라파덕</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 고라파덕을 발견하세요.</p>
             </td>
@@ -262,7 +254,7 @@
           <tr>
             <th><img src="../src/achv/yadon.png" alt="" /></th>
             <td colspan="6">
-              <h3>물가에서 멍때리기</h3>
+              <h3>야돈</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 야돈을 발견하세요.</p>
             </td>
@@ -270,7 +262,7 @@
           <tr>
             <th><img src="../src/achv/celler.png" alt="" /></th>
             <td colspan="6">
-              <h3>다이아몬드보다 딱딱한 껍질</h3>
+              <h3>셀러</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 셀러를 발견하세요.</p>
             </td>
@@ -278,7 +270,7 @@
           <tr>
             <th><img src="../src/achv/yadoran.png" alt="" /></th>
             <td colspan="6">
-              <h3>기본적으로 멍하니 있음</h3>
+              <h3>야도란</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 야돈과 셀러를 발견하세요.</p>
             </td>
@@ -286,7 +278,7 @@
           <tr>
             <th><img src="../src/achv/eve.png" alt="" /></th>
             <td colspan="6">
-              <h3>수많은 가능성과 꿈을 가진</h3>
+              <h3>이브이</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 이브이를 발견하세요.</p>
             </td>
@@ -302,7 +294,7 @@
           <tr>
             <th><img src="../src/achv/paori.png" alt="" /></th>
             <td colspan="6">
-              <h3>”파 줄기가 없으면 살 수 없다”</h3>
+              <h3>파오리</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 파오리를 발견하세요.</p>
             </td>
@@ -310,7 +302,7 @@
           <tr>
             <th><img src="../src/achv/phantom.png" alt="" /></th>
             <td colspan="6">
-              <h3>그림자 속의 저주</h3>
+              <h3>팬텀</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 팬텀을 발견하세요.</p>
             </td>
@@ -318,7 +310,7 @@
           <tr>
             <th><img src="../src/achv/tangguri.png" alt="" /></th>
             <td colspan="6">
-              <h3>어미를 만날 수 없는 슬픔</h3>
+              <h3>탕구리</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 탕구리를 발견하세요.</p>
             </td>
@@ -326,7 +318,7 @@
           <tr>
             <th><img src="../src/achv/byulgasari.png" alt="" /></th>
             <td colspan="6">
-              <h3>바다로 떨어진 무수한 별들</h3>
+              <h3>별가사리</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 별가사리를 발견하세요.</p>
             </td>
@@ -334,7 +326,7 @@
           <tr>
             <th><img src="../src/achv/ingeoking.png" alt="" /></th>
             <td colspan="6">
-              <h3>튀어오르기를(을) 사용했다!</h3>
+              <h3>잉어킹</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 잉어킹을 발견하세요.</p>
             </td>
@@ -342,63 +334,15 @@
           <tr>
             <th><img src="../src/achv/jamman.png" alt="" /></th>
             <td colspan="6">
-              <h3>먹고나면 잘 뿐</h3>
+              <h3>잠만보</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 잠만보를 발견하세요.</p>
             </td>
           </tr>
           <tr>
-            <th><img src="../src/achv/pangdori.png" alt="" /></th>
-            <td colspan="6">
-              <h3>고집세지만 귀여워</h3>
-              <h4>95%</h4>
-              <p>모든 지방에 있는 펭도리를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
-            <th><img src="../src/achv/bulkot.png" alt="" /></th>
-            <td colspan="6">
-              <h3>손발에 불꽃을 두르고</h3>
-              <h4>95%</h4>
-              <p>모든 지방에 있는 불꽃숭이를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
-            <th><img src="../src/achv/mobugi.png" alt="" /></th>
-            <td colspan="6">
-              <h3>새싹과도같은 거북</h3>
-              <h4>95%</h4>
-              <p>모든 지방에 있는 모부기를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
-            <th><img src="../src/achv/hankariasu.png" alt="" /></th>
-            <td colspan="6">
-              <h3>신오의 하늘</h3>
-              <h4>95%</h4>
-              <p>모든 지방에 있는 한카리아스를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
-            <th><img src="../src/achv/nyasuper.png" alt="" /></th>
-            <td colspan="6">
-              <h3>초능력 냐옹</h3>
-              <h4>95%</h4>
-              <p>모든 지방에 있는 냐스퍼를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
-            <th><img src="../src/achv/tarakyu.png" alt="" /></th>
-            <td colspan="6">
-              <h3>？？？</h3>
-              <h4>95%</h4>
-              <p>모？ ？？에 ？는 ？？큐를 ？견？？요.</p>
-            </td>
-          </tr>
-          <tr>
             <th><img src="../src/achv/myu.png" alt="" /></th>
             <td colspan="6">
-              <h3>모든 것들의 선조</h3>
+              <h3>뮤</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 뮤를 발견하세요.</p>
             </td>
@@ -406,23 +350,15 @@
           <tr>
             <th><img src="../src/achv/chilsaek.png" alt="" /></th>
             <td colspan="6">
-              <h3>하늘에 뜬 무지개</h3>
+              <h3>칠색조</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 칠색조를 발견하세요.</p>
             </td>
           </tr>
           <tr>
-            <th><img src="../src/achv/lugia.png" alt="" /></th>
-            <td colspan="6">
-              <h3>생명과 공존의 상징</h3>
-              <h4>95%</h4>
-              <p>모든 지방에 있는 루기아를 발견하세요.</p>
-            </td>
-          </tr>
-          <tr>
             <th><img src="../src/achv/gaioga.png" alt="" /></th>
             <td colspan="6">
-              <h3>폭풍을 불러들이는 대양의 힘</h3>
+              <h3>가이오가</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 가이오가를 발견하세요.</p>
             </td>
@@ -430,7 +366,7 @@
           <tr>
             <th><img src="../src/achv/grandon.png" alt="" /></th>
             <td colspan="6">
-              <h3>대지를 쌓아올리는 대륙의 힘</h3>
+              <h3>그란돈</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 그란돈를 발견하세요.</p>
             </td>
@@ -438,7 +374,7 @@
           <tr>
             <th><img src="../src/achv/rekujya.png" alt="" /></th>
             <td colspan="6">
-              <h3>구름보다 아득히 먼 위</h3>
+              <h3>레쿠쟈</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 레쿠쟈를 발견하세요.</p>
             </td>
@@ -446,8 +382,7 @@
           <tr>
             <th><img src="../src/achv/diaruga.png" alt="" /></th>
             <td colspan="6">
-              <h3>시간의 흐름을 만들어내는 존재</h3>
-              <h3></h3>
+              <h3>디아루가</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 디아루가를 발견하세요.</p>
             </td>
@@ -455,8 +390,7 @@
           <tr>
             <th><img src="../src/achv/perlgia.png" alt="" /></th>
             <td colspan="6">
-              <h3>평행으로 늘어선 공간의 틈새</h3>
-              <!-- <h3>공간의 틈새를 뒤틀어내는 힘</h3> -->
+              <h3>펄기아</h3>
               <h4>95%</h4>
               <p>모든 지방에 있는 펄기아를 발견하세요.</p>
             </td>
@@ -464,14 +398,71 @@
           <tr>
             <th><img src="../src/achv/arceus.png" alt="" /></th>
             <td colspan="6">
-              <!-- <h3>
-                "아르세우스" 세계를 창조하는 힘,우주가 태어난 곳, 그 존재가
-                시작된 곳
-              </h3> -->
-              <h3>"아르세우스"</h3>
+              <h3>아르세우스</h3>
               <h4>95%</h4>
-              <p>아르세우스를 발견하세요.</p>
+              <p>모든 지방에 있는 아르세우스를 발견하세요.</p>
             </td>
+          </tr>
+
+          <tr>
+            <th><img src="../src/achv/pangdori.png" alt="" /></th>
+            <td colspan="6">
+              <h3>펭도리</h3>
+              <h4>95%</h4>
+              <p>모든 지방에 있는 펭도리를 발견하세요.</p>
+            </td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/hankariasu.png" alt="" /></th>
+            <td colspan="6">
+              <h3>한카리아스</h3>
+              <h4>95%</h4>
+              <p>모든 지방에 있는 한카리아스를 발견하세요.</p>
+            </td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/nyasuper.png" alt="" /></th>
+            <td colspan="6">
+              <h3>냐스퍼</h3>
+              <h4>95%</h4>
+              <p>모든 지방에 있는 냐스퍼를 발견하세요.</p>
+            </td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/tarakyu.png" alt="" /></th>
+            <td colspan="6">
+              <h3>따라큐</h3>
+              <h4>95%</h4>
+              <p>모든 지방에 있는 따라큐를 발견하세요.</p>
+            </td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
+          </tr>
+          <tr>
+            <th><img src="../src/achv/" alt="" /></th>
+            <td colspan="6"></td>
           </tr>
         </table>
       </div>
