--- a/02.manholetable/manholetable_Kanto.html
+++ b/02.manholetable/manholetable_Kanto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>manholetable_Kanto</title>
+    <title>Kanto</title>
     <style>
       body {
         margin: 0;
@@ -138,6 +138,9 @@
         width: 70px;
         margin: 0px;
       }
+      a {
+        text-decoration-line: none;
+      }
     </style>
   </head>
   <body>
@@ -228,66 +231,56 @@
           <tr>
             <th>도쿄</th>
             <td colspan="6">
-              <img
-                src="../src/hole/Kanto/Tokyo/machida1/machida1_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/machida2/machida2_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/machida3/machida3_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/machida4/machida4_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/machida5/machida5_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/machida6/machida6_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/Ogasawara1/Ogasawara1_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/Ogasawara3/Ogasawara3_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/Ogasawara4/Ogasawara4_l.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/ueno1/ueno1_sml.png"
-                alt=""
-                width=""
-              />
-              <img
-                src="../src/hole/Kanto/Tokyo/ueno2/ueno2_l.png"
-                alt=""
-                width=""
-              />
+              <a href="../03.manholecity/manholecity_Tokyo.html"
+                ><img
+                  src="../src/hole/Kanto/Tokyo/machida1/machida1_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/machida2/machida2_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/machida3/machida3_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/machida4/machida4_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/machida5/machida5_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/machida6/machida6_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/Ogasawara1/Ogasawara1_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/Ogasawara2/Ogasawara2_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/Ogasawara3/Ogasawara3_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/Ogasawara4/Ogasawara4_l.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/ueno1/ueno1_sml.png"
+                  alt=""
+                  width="" />
+                <img
+                  src="../src/hole/Kanto/Tokyo/ueno2/ueno2_l.png"
+                  alt=""
+                  width=""
+              /></a>
             </td>
           </tr>
           <tr>
