--- a/05.achievement/achievement.html
+++ b/05.achievement/achievement.html
@@ -418,6 +418,15 @@
             </td>
           </tr>
           <tr>
+            <th><img src="../src/achv/darkrai.png" alt="" /></th>
+            <td colspan="6">
+              <h3>악몽 속에 나타난 포켓몬</h3>
+              <h4>5 / 13</h4>
+              <h6>67%</h6>
+              <p>모든 지방에 있는 다크라이를 발견하세요.</p>
+            </td>
+          </tr>
+          <tr>
             <th><img src="../src/achv/nyasuper.png" alt="" /></th>
             <td colspan="6">
               <h3>초능력 냐옹</h3>
