--- a/01.mainpage/mainpage_greyR.html
+++ b/01.mainpage/mainpage_greyR.html
@@ -4,22 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Mainpage</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
     * {
       font-family: "Noto Sans KR", sans-serif;
       font-optical-sizing: auto;
-      font-style: normal;}
+      font-style: normal;
+    }
 
     body {
       margin: 0;
       background-image: url(./src/bg_dot.png);
     }
-    img { display: flex;
+    img{ display: flex;
       object-fit: contain;}
 
     .container1 {
+      position: relative;
       width: 100%;
       height: 100vh;
       background-image: url(./src/manhole_main_grey.png);
@@ -28,6 +30,7 @@
       background-position: 600px 100px;
       border: 20px solid #dbdbdb;
       box-sizing: border-box;
+      
     }
 
     .container1 audio {
@@ -35,7 +38,7 @@
     }
 
     .map {
-      position: relative;
+      position: absolute;
       display: flex;
       object-fit: contain;
       width: 1000px;
@@ -188,8 +191,10 @@
     </section>
   </main>
 <!-- modal end -->
-  <img class="map" src="./src/manhole_main_grey.png" alt="">
-  <a href="">
+  <div style="position: absolute;">
+    <img class="map" src="./src/manhole_main_grey.png" alt="">
+  </div>
+  <a href="../02.manholetable/manholetable_Kanto.html">
     <div class="regionbox" style="    
         left: 72%;
         bottom: 25%;
