--- a/03.manholecity/manholecity_Tokyo.html
+++ b/03.manholecity/manholecity_Tokyo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tokyo</title>
     <style>
       * {
         margin: 0;
@@ -16,24 +16,6 @@
         background-image: url(../01.mainpage/src/bg_dot.png);
       }
 
-      .cityname h1::before {
-        content: "";
-        display: inline-block;
-        width: 34px;
-        height: 34px;
-        background-image: url(../02.manholetable/src/icon_mb_g_red.png);
-        background-size: contain;
-        margin: 0 13px;
-      }
-      .cityname h1::after {
-        content: "";
-        display: inline-block;
-        width: 34px;
-        height: 34px;
-        background-image: url(../02.manholetable/src/icon_mb_g_red.png);
-        background-size: contain;
-        margin: 0 13px;
-      }
       .city {
         position: relative;
         width: 100%;
@@ -52,19 +34,42 @@
         font-size: larger;
         box-shadow: 0px 4px 2px 2px rgba(55, 55, 55, 0.25);
       }
+      .cityname h1 {
+        text-align: center;
+      }
+      .cityname h1::before {
+        content: "";
+        display: inline-block;
+        width: 34px;
+        height: 34px;
+        background-image: url(../02.manholetable/src/icon_mb_g_red.png);
+        background-size: contain;
+        margin: 0 13px;
+      }
+      .cityname h1::after {
+        content: "";
+        display: inline-block;
+        width: 34px;
+        height: 34px;
+        background-image: url(../02.manholetable/src/icon_mb_g_red.png);
+        background-size: contain;
+        margin: 0 13px;
+      }
       .citymanhole {
         width: 52%;
         height: 70vh;
         z-index: 10px;
+        padding: 0 20px;
         background-color: white;
         position: relative;
-        left: 25%;
+        left: 23.5%;
         bottom: 3px;
         border-bottom: 3px solid #dbdbdb;
         border-left: 3px solid #dbdbdb;
         border-right: 3px solid #dbdbdb;
         border-radius: 0 0 10px 10px;
         box-shadow: 0px 5px 2px 2px rgba(55, 55, 55, 0.25);
+        overflow-y: auto;
       }
       .citymanhole ul {
         display: flex;
@@ -83,6 +88,7 @@
         margin-inline-end: 0px;
         unicode-bidi: isolate;
         padding: 0px;
+        margin: 0;
       }
       li {
         list-style: none;
@@ -122,7 +128,7 @@
         width: 200px;
         position: absolute;
         right: 40px;
-        top: 41px;
+        top: 40px;
       }
     </style>
   </head>
