--- a/05.achievement/achievement.html
+++ b/05.achievement/achievement.html
@@ -16,6 +16,7 @@
       height: 100vh;
       border: 20px solid #dbdbdb;
       box-sizing: border-box;
+      overflow-y: auto;
     }
 
     .tablecontainer audio {
@@ -84,7 +85,7 @@
     .minimap {
       position: absolute;
       top: 40px;
-      right: 70px;
+      right: 30px;
       width: 100%;
       height: 100%;
       max-width: 390px;
@@ -97,8 +98,6 @@
       box-shadow: 0 7px 10px 0 black;
       padding: 13px;
     }
-
-
 
     .manholetable h1 {
       display: flex;
@@ -113,7 +112,6 @@
     .manholetable h5 {
       display: flex;
       justify-content: left;
-
       color: black;
       margin: 0 auto;
     }
@@ -151,7 +149,6 @@
       border: 3px solid #dbdbdb;
       border-collapse: collapse;
       position: relative;
-
       margin: 0;
       padding: 0;
       border-radius: 10px;
@@ -243,7 +240,6 @@
         <h5>총 도전 과제: 115</h5>
         <h6>전체 플레이어 대비 비율 (%)&nbsp;</h6>
         <h5>도전 과제 진행률: 83 / 115 (72%)</h5>
-
         <table class="manholetableline">
           <tr>
             <th><img src="../src/achv/pika.png" alt="" /></th>
@@ -455,7 +451,7 @@
           <tr>
             <th><img src="../src/achv/mobugi.png" alt="" /></th>
             <td colspan="6">
-              <h3>새싹과도같은 거북</h3>
+              <h3>어린잎거북이</h3>
               <h4>5 / 13</h4>
               <h6>67%</h6>
               <p>모든 지방에 있는 모부기를 발견하세요.</p>
