--- a/01.mainpage/mainpage.html
+++ b/01.mainpage/mainpage.html
@@ -19,10 +19,10 @@
       background-image: url(./src/bg_dot.png);
     }
 
-    img {
+    /* img {
       display: flex;
       object-fit: contain;
-    }
+    } */
 
     .container1 {
       position: relative;
@@ -51,15 +51,7 @@
       position: absolute;
     }
 
-    /* .map {
-      position: absolute;
-      display: flex;
-      object-fit: contain;
-      width: 1000px;
-      left: 600px;
-      top: 100px;
 
-    } */
 
     .trainercredit {
       position: absolute;
@@ -100,23 +92,23 @@
     }
 
     .map {
-      position: absolute;
+      position: relative;
       margin: 0 auto;
       width: 100%;
       max-width: 800px;
       height: auto;
       max-height: 550px;
-      left: 40%;
-      top: 25%;
+      left: 10%;
+      top: 20%;
 
     }
 
     .map>img {
 
+      position: absolute;
       display: flex;
       width: 100%;
       height: auto;
-
 
     }
 
@@ -269,7 +261,7 @@
 </div>
 </body>
 <!-- login -->
-<!-- <div class="container" id="container" style="position: absolute; left: 40px; top: 40px">
+<div class="container" id="container" style="position: absolute; left: 40px; top: 40px">
   <div class="form-container sign-up-container">
     <form action="#">
       <h1>트레이너 등록</h1>
@@ -316,7 +308,7 @@
       </div>
     </div>
   </div>
--->
+
 
 </div>
 <link rel="stylesheet" href="./modal.css">
