[ADD] login 기능 html

--- a/01.mainpage/mainpage.html
+++ b/01.mainpage/mainpage.html
@@ -278,7 +278,7 @@
     </form>
   </div>
   <div class="form-container sign-in-container">
-    <form action="#">
+    <form action="#" id="login-form">
       <h1>Sign in</h1>
       <div class="social-container">
         <a href="#" class="social"><img src="./src/Google__G__logo.svg" alt="" width="30px"></a>
@@ -286,9 +286,9 @@
         <a href="#" class="social"><img src="./src/icon_x_b.svg" alt="" width="30px"></a>
       </div>
       <span>오랜만이에요!</span>
-      <input type="email" placeholder="Email" />
+      <input id="login-email" type="email" placeholder="Email" />
       <img class="loginwalk" src="../src/gif/trainerwithpika.gif" alt="">
-      <input type="password" placeholder="Password" />
+      <input id="login-password" type="password" placeholder="Password" />
       <a href="#">비밀번호를 잊으셨나요?</a>
       <button>Poke!</button>
     </form>
