--- a/01.mainpage/Mainpage_login.html
+++ b/01.mainpage/Mainpage_login.html
@@ -102,8 +102,8 @@
   </body>
   <!-- login -->
 
-  <!-- 
-  <div class="container" id="container" style="position: absolute; left: 40px; top: 40px">
+
+  <div class="container" id="container" style="position: absolute; left: 40px; top: 40px ">
     <div class="form-container sign-up-container">
       <form action="#">
         <h1>트레이너 등록</h1>
@@ -150,12 +150,10 @@
         </div>
       </div>
     </div>
-  </div> -->
-
-  <!-- 트레이너 정보 -->
+  </div>
   <div class="container" id="container" style="position: absolute; left: 40px; top: 40px; z-index: 9004;">
     <div class="trainertop">
-      <h1> 트레이너 자격증</h1>
+      <h1> TRAINER LICENSE</h1>
     </div>
     <div class="trainerleft"><img src="./src/trainer.png" alt="" width="150px" style="display: block;
   margin: 30px auto ;"></div>
@@ -164,48 +162,72 @@
           src="../src/achv/badge/격투.webp" alt=""><img src="../src/achv/badge/독.webp" alt=""><img
           src="../src/achv/badge/전기.webp" alt=""><img src="../src/achv/badge/에스퍼.webp" alt=""><img
           src="../src/achv/badge/드래곤.webp" alt=""><img src="../src/achv/badge/풀.webp" alt=""></div>
-      <div class="trainerright-right"><img src="../src/gif/eevee-pokemon.gif" alt=""
-          style="max-width: 190px; margin: 27px auto;"></div>
+
       <div class="trainerright-left">
-        <h5 style="display: inline;">진행중인 도전과제 <h6 style="display: inline;">더보러가기</h6>
-        </h5>
+        <table>
+          <tr>
+            <th>
+              <h5 style="display: inline;">진행중인 도전과제 <h6 style="display: inline;">더보러가기</h6>
+              </h5>
+            </th>
+          </tr>
+        </table>
+
         <div class="trainerright-left-bottom">
           <table>
             <tr>
-              <th>1</th>
+              <td>영원한 나의 친구</td>
+              <th><img src="../src/achv/mini/pika.webp" alt=""></th>
             </tr>
             <tr>
-              <td>2</td>
+              <td>다이아몬드보다 딱딱한 껍질</td>
+              <th><img src="../src/achv/mini/celler.png" alt=""></th>
             </tr>
             <tr>
-              <td>3</td>
+              <td>먹고나면 잘 뿐</td>
+              <th><img src="../src/achv/mini/jamman.webp" alt=""></th>
             </tr>
             <tr>
-              <td>4</td>
+              <td>손발에 불꽃을 두르고</td>
+              <th><img src="../src/achv/mini/bulkot.webp" alt=""></th>
             </tr>
             <tr>
-              <td>5</td>
+              <td>악몽 속에 나타난 정체</td>
+              <th><img src="../src/achv/mini/darkrai.webp" alt=""></th>
             </tr>
             <tr>
-              <td>6</td>
+              <td>기본적으로 멍하니 있음</td>
+              <th><img src="../src/achv/mini/yadoran.webp" alt=""></th>
             </tr>
             <tr>
-              <td>7</td>
+              <td>그림자 속의 저주</td>
+              <th><img src="../src/achv/mini/phantom.webp" alt=""></th>
             </tr>
             <tr>
-              <td>8</td>
+              <td>바다로 떨어진 무수한 별들</td>
+              <th><img src="../src/achv/mini/bulgasari.webp" alt=""></th>
             </tr>
             <tr>
-              <td>9</td>
+              <td>생명과 공존의 상징</td>
+              <th><img src="../src/achv/mini/lugia.webp" alt=""></th>
             </tr>
             <tr>
-              <td>10</td>
+              <td>모든 것들의 선조</td>
+              <th><img src="../src/achv/mini/myu.webp" alt=""></th>
             </tr>
           </table>
         </div>
       </div>
+      <div class="trainerright-right">
+        <img src="../src/achv/mini/yadon.webp" alt="" style="left: 20%; top: 30%">
+        <img src="../src/achv/mini/eve.webp" alt="" style="left: 50%; top: 50%">
+        <img src="../src/achv/mini/tangguri.webp" alt="" style="left: 24%; top:60%; ">
+        <img src="../src/achv/mini/gorapaduk.webp" alt="" style="left: 70%; top: 80%">
+      </div>
     </div>
   </div>
+  <!-- 트레이너 정보 -->
+
   <!-- 트레이너 정보 end -->
 
   <link rel="stylesheet" href="./modal.css">
