--- a/01.mainpage/Mainpage_login_test.html
+++ b/01.mainpage/Mainpage_login_test.html
@@ -102,7 +102,7 @@
   </body>
   <!-- login -->
 
-
+  <!-- 
   <div class="container" id="container" style="position: absolute; left: 40px; top: 40px ">
     <div class="form-container sign-up-container">
       <form action="#">
@@ -150,7 +150,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- License -->
   <div class="containerlicense" id="containerlicense" style="position: absolute; left: 40px; top: 40px; ;">
     <div class="trainertop">
