--- a/src/pages/Main/mainPage.html
+++ b/src/pages/Main/mainPage.html
@@ -4,152 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mainpage</title>
-    <style>
-      @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap");
-
-      * {
-        font-family: "Noto Sans KR", sans-serif;
-        font-optical-sizing: auto;
-        font-style: normal;
-      }
-
-      body {
-        margin: 0;
-        background-image: url(/src/assets/bg_dot.png);
-      }
-
-      img {
-        display: flex;
-        object-fit: contain;
-      }
-
-      .container1 {
-        position: relative;
-        width: 100%;
-        height: 100vh;
-        /* background-image: url(/src/assets/manhole_main_grey.png);
-      background-repeat: no-repeat;
-      background-size: 1000px;
-      background-position: 600px 100px; */
-        border: 20px solid #dbdbdb;
-        box-sizing: border-box;
-        display: flex;
-        /* z-index: 8999; */
-      }
-
-      .container1 audio {
-        position: absolute;
-      }
-
-      /* .map {
-      position: absolute;
-      display: flex;
-      object-fit: contain;
-      width: 1000px;
-      left: 600px;
-      top: 100px;
-
-    } */
-
-      .trainercredit {
-        position: absolute;
-        bottom: -20px;
-        left: 10px;
-      }
-
-      .trainerwalk {
-        position: absolute;
-        width: 50px;
-        bottom: 230px;
-        right: 145px;
-      }
-
-      .world {
-        position: absolute;
-        width: 230px;
-        right: 55px;
-        bottom: 30px;
-        animation: rotate 13s linear infinite;
-        filter: drop-shadow(10px 10px 5px rgba(0, 0, 0, 0.55));
-      }
-
-      @keyframes rotate {
-        to {
-          transform: rotate(360deg);
-        }
-      }
-
-      a h1 {
-        color: rgb(84, 84, 84);
-      }
-
-      a > div:hover {
-        background-color: rgb(255, 255, 255);
-      }
-
-      .map {
-        display: inline-block;
-        position: relative;
-        margin: 0 auto;
-        max-width: 100vh;
-        width: 100%;
-        height: 80vh;
-        max-height: 80vh;
-        left: 170px;
-        top: 150px;
-      }
-
-      .map > img {
-        max-width: 1000px;
-        width: 100%;
-        height: auto;
-      }
-
-      .regionbox {
-        border: 4px solid rgb(130, 130, 130);
-        border-radius: 20%;
-        padding: 11px 20px;
-        position: absolute;
-        /* max-width:max-content; */
-        height: auto;
-        background-color: rgb(255, 255, 255);
-        box-shadow: 0 2px 40px rgba(0, 0, 0, 0.25),
-          0 2px 2px rgba(0, 0, 0, 0.22);
-      }
-
-      .logoshadow {
-        filter: drop-shadow(5px 5px 15px rgba(0, 0, 0, 0.55));
-      }
-
-      /* Region text color */
-      .pink:hover {
-        color: rgb(246, 92, 118);
-      }
-
-      .yellow:hover {
-        color: rgb(214, 214, 0);
-      }
-
-      .red:hover {
-        color: rgb(255, 0, 0);
-      }
-
-      .green:hover {
-        color: rgba(0, 206, 0, 0.584);
-      }
-
-      .orange:hover {
-        color: orange;
-      }
-
-      .blue:hover {
-        color: rgba(0, 128, 248, 0.711);
-      }
-
-      /* Region text color end */
-    </style>
+    <link rel="stylesheet" href="./manholeTable/manholeTable.css" />
+    <link rel="stylesheet" href="./MainPage.css" />
   </head>
   <body>
+    <div class="manholetable-modal" style="display: none">
+      <div class="manholetable">
+        <h1 class="manholetable-name">간토</h1>
+        <h5>&nbsp;55%</h5>
+        <table class="manholetableline"></table>
+      </div>
+    </div>
+
     <div class="modal">
       <div class="modal_popup">
         <h3>우리가 누구냐고 물으신다면</h3>
@@ -184,32 +50,32 @@
       <!-- modal end -->
       <div class="map">
         <img src="/src/assets/manhole_main_grey.png" width="1000px" alt="" />
-        <a href="../02.manholetable/manholetable_Kanto.html">
+        <a class="land-box">
           <div class="regionbox" style="left: 76%; bottom: 25%">
             <h1 class="orange">간토</h1>
           </div>
         </a>
-        <a href="">
+        <a class="land-box">
           <div class="regionbox" style="left: 67%; bottom: 70%">
             <h1 class="blue">홋카이도•도호쿠</h1>
           </div>
         </a>
-        <a href="">
+        <a class="land-box">
           <div class="regionbox" style="left: 58%; bottom: 30%">
             <h1 class="green">주부</h1>
           </div>
         </a>
-        <a href="">
+        <a class="land-box">
           <div class="regionbox" style="left: 43%; bottom: 20%">
             <h1 class="red">긴키</h1>
           </div>
         </a>
-        <a href="">
+        <a class="land-box">
           <div class="regionbox" style="left: 22%; bottom: 30%">
             <h1 class="yellow">주고쿠•시코쿠</h1>
           </div>
         </a>
-        <a href="">
+        <a class="land-box">
           <div class="regionbox" style="left: 2%; bottom: 15%">
             <h1 class="pink">규슈•오키나와</h1>
           </div>
@@ -469,5 +335,6 @@
   </script>
   <link rel="stylesheet" href="./login_style_grey.css" />
   <script src="./login.js"></script>
+  <script type="module" src="./manholeTable/manholeTable.js"></script>
   <!-- login end -->
 </html>
