[ADD] manholePage query데이터로 맨홀 정보 가져오기

--- a/src/pages/Manhole/manholePage.html
+++ b/src/pages/Manhole/manholePage.html
@@ -11,7 +11,7 @@
     <!-- container -->
     <div class="city">
       <div class="cityname">
-        <h1>도쿄</h1>
+        <h1 class="cityname-item">도쿄</h1>
         <h4>&nbsp;77%</h4>
       </div>
 
