--- a/04_Manhole/manhole_Lugia.html
+++ b/04_Manhole/manhole_Lugia.html
@@ -121,6 +121,7 @@
       border-collapse: collapse;
       border-radius: 10px;
       /* box-shadow: 0 7px 10px 0 black; */
+
       margin: 0;
     }
 
@@ -133,7 +134,10 @@
       /* border: 3px solid rgb(0, 183, 255); */
       border-radius: 7px;
       overflow-y: auto;
-      background-image: url(../src/assets/bg_dot.png)
+
+      background-image: url(../src/assets/bg_dot.png);
+      -webkit-backdrop-filter: blur(10px);
+      backdrop-filter: blur(10px);
     }
 
 
@@ -154,6 +158,7 @@
       border-radius: 7px;
       background-color: white;
       box-shadow: 0px 0px 10px 10px #dbdbdb;
+
 
     }
 
